update : 界面修改，新增各项设计背景

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,17 @@
 <resources>
-    <string name="app_name">贝芽机器人</string>
+    <string name="app_name">贝芽创世界</string>
     <string name="disable_devices">本机设备不支持使用低功耗蓝牙,应用将无法使用</string>
-    <string name="empty_devices">没有发现可连接的贝芽编程机器人</string>
+    <string name="empty_devices">没有发现可连接的设备</string>
     <string name="prop_count_text">获得道具：</string>
     <string name="step_count_text">前进步数：</string>
     <string name="known_count_text">学到知识：</string>
     <string name="coin_count_text">获得金币：</string>
-    <string name="welcome">欢迎使用贝芽编程机器人</string>
+    <string name="welcome">Hello\n欢迎使用\nSTEAM创编机器人</string>
     <string name="search_device">搜索设备</string>
     <string name="use_manual">使用指南</string>
     <string name="version_code">version: 1.1.0</string>
     <string name="footer_devices">下拉刷新可重新搜索设备</string>
     <string name="header_devices">可连接设备列表</string>
+    <string name="device_name">STEAM创编机器人</string>
+    <string name="device_address">94:3C:C6:66:04:0E</string>
 </resources>
