--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="device_name">STEAM创编机器人</string>
     <string name="device_address">94:3C:C6:66:04:0E</string>
     <string name="speed_settings">速度设置</string>
-    <string name="emotion_display">情景同步</string>
+    <string name="scene_sync">情景同步</string>
     <string name="save_settings">保存设置</string>
     <string name="fetch_current_speed">获取当前速度</string>
     <string name="plus">+</string>
@@ -26,6 +26,6 @@
     <string name="function_attention">提示：搜索前,请先打开设备蓝牙和手机定位功能</string>
     <string name="card_controller">图形编程</string>
     <string name="card_run">执行指令</string>
-    <string name="choose_card">选择卡片</string>
+    <string name="choose_card">选择指令</string>
     <string name="click_to_modify">点击修改</string>
 </resources>
